added further text, js now working again

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ background-color: var(--rust);}
 
 h1 {background-color: var(--white);
 text-align: center;
+font-size: large;
 text-decoration: underline;
 margin: 2.5rem auto;
 margin-left: 25rem;
@@ -46,6 +47,29 @@ border: #343F3E;
 border-style:solid;
 padding: 1rem;
 text-indent: 5%;}
+
+article { text-align:center;
+background-color: var(--white);
+margin-left: 10rem;
+margin-right: 70rem;
+min-height: auto;
+border: #343F3E;
+border-style:solid;
+text-indent: 0%;
+
+
+}
+
+.education {text-align:center;
+    background-color: var(--white);
+    margin-left: 70rem;
+    margin-right: 10rem;
+    min-height: auto;
+    border: #343F3E;
+    border-style:solid;
+    text-indent: 0%;}
+
+h2 {text-decoration: underline;}
 
 a.button {
     -webkit-appearance: button;
